[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/gui/Theme.tres" type="Theme" id=1]
[ext_resource path="res://src/menus/StoreMenu.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "ConfirmUp"
length = 0.3
tracks/0/type = "bezier"
tracks/0/path = NodePath("Confirm:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Confirm:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 640, -0.25, 0, 0.25, 0, 60, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Confirm:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Confirm:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 640, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="StoreMenu" type="Control"]
margin_right = 360.0
margin_bottom = 640.0
rect_min_size = Vector2( 360, 640 )
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Top" type="Panel" parent="."]
margin_right = 360.0
margin_bottom = 60.0

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 20.0
margin_top = 60.0
margin_right = 340.0
margin_bottom = 580.0

[node name="Display" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 320.0
margin_bottom = 387.0

[node name="Recharge" type="Label" parent="ScrollContainer/Display"]
visible = false
margin_right = 320.0
margin_bottom = 63.0
mouse_filter = 1
text = "
RECHARGE"
align = 1

[node name="Energy" type="Panel" parent="ScrollContainer/Display"]
visible = false
margin_right = 320.0
margin_bottom = 160.0
rect_min_size = Vector2( 320, 160 )
mouse_filter = 1

[node name="Label" type="Label" parent="ScrollContainer/Display/Energy"]
margin_left = 20.0
margin_top = 22.0
margin_right = 300.0
margin_bottom = 62.0
text = "Energy Cell"
align = 1
valign = 1

[node name="RechargeAd" type="Button" parent="ScrollContainer/Display/Energy"]
margin_left = 20.0
margin_top = 82.0
margin_right = 80.0
margin_bottom = 142.0
text = "Ad"

[node name="RechargeCoin" type="Button" parent="ScrollContainer/Display/Energy"]
margin_left = 100.0
margin_top = 82.0
margin_right = 220.0
margin_bottom = 142.0
text = "10 Coins"

[node name="Tools" type="Label" parent="ScrollContainer/Display"]
margin_right = 320.0
margin_bottom = 63.0
mouse_filter = 1
text = "
BUY TOOLS"
align = 1

[node name="Solver" type="Panel" parent="ScrollContainer/Display"]
margin_top = 67.0
margin_right = 320.0
margin_bottom = 387.0
rect_min_size = Vector2( 320, 320 )
mouse_filter = 1

[node name="Solve1" type="Button" parent="ScrollContainer/Display/Solver"]
margin_left = 60.0
margin_top = 33.0
margin_right = 260.0
margin_bottom = 93.0
text = "1 Solver - 30 Coins"

[node name="Solve2" type="Button" parent="ScrollContainer/Display/Solver"]
margin_left = 60.0
margin_top = 122.0
margin_right = 260.0
margin_bottom = 182.0
text = "10 Solvers - 280 Coins"

[node name="Solve3" type="Button" parent="ScrollContainer/Display/Solver"]
margin_left = 60.0
margin_top = 213.0
margin_right = 260.0
margin_bottom = 273.0
text = "20 Solvers - 500 Coins"

[node name="Coins" type="Label" parent="ScrollContainer/Display"]
visible = false
margin_top = 391.0
margin_right = 320.0
margin_bottom = 454.0
mouse_filter = 1
text = "
COINS"
align = 1
valign = 2

[node name="CoinShop" type="Panel" parent="ScrollContainer/Display"]
visible = false
margin_top = 391.0
margin_right = 320.0
margin_bottom = 711.0
rect_min_size = Vector2( 320, 320 )
mouse_filter = 1

[node name="Coin1" type="Button" parent="ScrollContainer/Display/CoinShop"]
margin_left = 60.0
margin_top = 26.0
margin_right = 260.0
margin_bottom = 86.0
text = "80 Coins - $0.99"

[node name="Coins2" type="Button" parent="ScrollContainer/Display/CoinShop"]
margin_left = 60.0
margin_top = 126.0
margin_right = 260.0
margin_bottom = 186.0
text = "500 Coins - $4.99"

[node name="Coins3" type="Button" parent="ScrollContainer/Display/CoinShop"]
margin_left = 60.0
margin_top = 226.0
margin_right = 260.0
margin_bottom = 286.0
text = "1200 Coins - $9.99"

[node name="Bottom" type="Panel" parent="."]
margin_top = 580.0
margin_right = 360.0
margin_bottom = 640.0

[node name="Confirm" type="Panel" parent="."]
margin_top = 640.0
margin_right = 360.0
margin_bottom = 1160.0

[node name="Label" type="Label" parent="Confirm"]
margin_left = 40.0
margin_right = 321.0
margin_bottom = 360.0
text = "Buy 20 Instant Solvers for 200 Coins?"
align = 1
valign = 1
autowrap = true

[node name="Confirm" type="Button" parent="Confirm"]
margin_left = 60.0
margin_top = 340.0
margin_right = 300.0
margin_bottom = 400.0
rect_min_size = Vector2( 240, 60 )
text = "Confirm Purchase"

[node name="Cancel" type="Button" parent="Confirm"]
margin_left = 60.0
margin_top = 420.0
margin_right = 300.0
margin_bottom = 480.0
text = "Cancel"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ConfirmUp = SubResource( 1 )
anims/RESET = SubResource( 2 )

[connection signal="pressed" from="ScrollContainer/Display/Solver/Solve1" to="." method="_on_Solve1_pressed"]
[connection signal="pressed" from="ScrollContainer/Display/Solver/Solve2" to="." method="_on_Solve2_pressed"]
[connection signal="pressed" from="ScrollContainer/Display/Solver/Solve3" to="." method="_on_Solve3_pressed"]
[connection signal="pressed" from="Confirm/Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="pressed" from="Confirm/Cancel" to="." method="_on_Cancel_pressed"]
